--- a/index.html
+++ b/index.html
@@ -26,8 +26,28 @@
 
 <body>
 
-    
+    <!-- =================================== NAVBAR =================================== -->
 
+    <nav>
+        <img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm">
+        <a href="#">ABOUT THE FARM</a>
+        <a href="#">SHOP PRODUCTS</a>
+        <a href="#">FAQ</a>
+        <a href="#">SAY HELLO</a>
+    </nav>
+
+    <!-- =================================== SECTION 1 =================================== -->
+
+    <section>
+        <div class="section1">
+            <h3>- Since 1927 -</h3>
+            <div class="separation"></div>
+            <h1>LEWIS CHICKEN FARM</h1>
+            <div class="separation"></div>
+            <h2>100% ORGANIC / FREE RANGE / GMO - FREE</h2>
+        </div>
+
+    </section>
 
 </body>
 
