--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
 
     <!-- =================================== ICONS =================================== -->
 
@@ -44,9 +44,32 @@
             <div class="separation"></div>
             <h1>LEWIS CHICKEN FARM</h1>
             <div class="separation"></div>
-            <h2>100% ORGANIC / FREE RANGE / GMO - FREE</h2>
+            <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
         </div>
+    </section>
 
+    <!-- =================================== SECTION 2 =================================== -->
+
+    <section>
+        <div class="section2">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="section2-left">
+                        <h2>ABOUT THE FARM</h2>
+                        <a href="#">Our Story</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="section2-middle"></div>
+                </div>
+                <div class="col-md-4">
+                    <div class="section2-menu">
+                        <h2>ABOUT THE FARM</h2>
+                        <a href="#">Our Story</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
