--- a/index.html
+++ b/index.html
@@ -28,44 +28,67 @@
 
     <!-- =================================== NAVBAR =================================== -->
 
-    <nav>
-        <img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm">
-        <a href="#">ABOUT THE FARM</a>
-        <a href="#">SHOP PRODUCTS</a>
-        <a href="#">FAQ</a>
-        <a href="#">SAY HELLO</a>
-    </nav>
+    <!-- <nav>
+        <div class="row">
+            <div class="col-lg-5 logo-nav">
+                <a href="#"><img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm"></a>
+            </div>
+            <div class="col-lg-7 menus-nav">
+                <a href="#">ABOUT THE FARM</a>
+                <a href="#">SHOP PRODUCTS</a>
+                <a href="#">FAQ</a>
+                <a href="#">SAY HELLO</a>
+            </div>
+        </div>
+    </nav> -->
 
     <!-- =================================== SECTION 1 =================================== -->
 
-    <section>
-        <div class="section1">
-            <h3>- Since 1927 -</h3>
-            <div class="separation"></div>
-            <h1>LEWIS CHICKEN FARM</h1>
-            <div class="separation"></div>
-            <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
+    <!-- <section>
+        <div class="row">
+            <div class="col-lg-12 section1-photo">
+                <div class="section1-titres">
+                    <h3>- Since 1927 -</h3>
+                    <div class="separation"></div>
+                    <h1>LEWIS CHICKEN FARM</h1>
+                    <div class="separation"></div>
+                    <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
+                </div>
+            </div>
         </div>
-    </section>
+        </div>
+    </section> -->
 
     <!-- =================================== SECTION 2 =================================== -->
 
     <section>
         <div class="section2">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="section2-left">
-                        <h2>ABOUT THE FARM</h2>
-                        <a href="#">Our Story</a>
+                <div class="col-lg-4">
+                    <div class="section2-photo"
+                        style="background-image: url(/assets/images/section2/left/section2-left.jpg)">
+                        <div class="section2-titre">
+                            <h2>ABOUT THE FARM</h2>
+                            <a href="#">Our Story</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="section2-middle"></div>
+                <div class="col-lg-4">
+                    <div class="section2-photo"
+                        style="background-image: url(/assets/images/section2/middle/section2-middle.jpg)">
+                        <div class="section2-titre">
+                            <h2>ABOUT THE FARM</h2>
+                            <a href="#">Our Story</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="section2-menu">
-                        <h2>ABOUT THE FARM</h2>
-                        <a href="#">Our Story</a>
+                <div class="col-lg-4">
+                    <div class="section2-photo"
+                        style="background-image: url(/assets/images/section2/right/section2-right.jpg)">
+                        <div class="section2-titre">
+                            <h2>ABOUT THE FARM</h2>
+                            <a href="#">Our Story</a>
+                        </div>
                     </div>
                 </div>
             </div>
