--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- =================================== NAVBAR =================================== -->
 
-    <!-- <nav>
+    <nav>
         <div class="row">
             <div class="col-lg-5 logo-nav">
                 <a href="#"><img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm"></a>
@@ -40,24 +40,23 @@
                 <a href="#">SAY HELLO</a>
             </div>
         </div>
-    </nav> -->
+    </nav>
 
     <!-- =================================== SECTION 1 =================================== -->
 
-    <!-- <section>
-        <div class="row">
-            <div class="col-lg-12 section1-photo">
-                <div class="section1-titres">
-                    <h3>- Since 1927 -</h3>
-                    <div class="separation"></div>
-                    <h1>LEWIS CHICKEN FARM</h1>
-                    <div class="separation"></div>
-                    <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
+    <section class="section1">
+            <div class="row">
+                <div class="col-lg-12 section1-photo">
+                    <div class="section1-titres">
+                        <h3>- Since 1927 -</h3>
+                        <div class="separation"></div>
+                        <h1>LEWIS CHICKEN FARM</h1>
+                        <div class="separation"></div>
+                        <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
-    </section> -->
+    </section>
 
     <!-- =================================== SECTION 2 =================================== -->
 
@@ -67,7 +66,7 @@
                 <div class="col-lg-4">
                     <div class="section2-photo"
                         style="background-image: url(/assets/images/section2/left/section2-left.jpg)">
-                        <div class="section2-titre">
+                        <div class="section2-titres">
                             <h2>ABOUT THE FARM</h2>
                             <a href="#">Our Story</a>
                         </div>
@@ -76,25 +75,31 @@
                 <div class="col-lg-4">
                     <div class="section2-photo"
                         style="background-image: url(/assets/images/section2/middle/section2-middle.jpg)">
-                        <div class="section2-titre">
-                            <h2>ABOUT THE FARM</h2>
-                            <a href="#">Our Story</a>
+                        <div class="section2-middle">
+                            <h2>FRESH FARM PRODUCTS</h2>
+                            <div class="section2-logo-middle">
+                                <img src="/assets/images/section2/middle/Plugin icon - 1.png" alt="Logo best quality">
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus expedita, ea vitae earum
+                                vero reiciendis rerum explicabo ab, vel sunt dolor? Quod, reprehenderit? Similique eum
+                                repellendus praesentium necessitatibus eos sunt porro laborum architecto reiciendis.
+                                Numquam!</p>
+                            <a href="#" class="btn">Order Today</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="section2-photo"
-                        style="background-image: url(/assets/images/section2/right/section2-right.jpg)">
-                        <div class="section2-titre">
-                            <h2>ABOUT THE FARM</h2>
-                            <a href="#">Our Story</a>
+                        style="background-image: url(/assets/images/section2/right/section2-right.jpg)" >
+                        <div class="section2-titres">
+                            <h2>PAY US A VISIT</h2>
+                            <a href="#">Our Address</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
