--- a/index.html
+++ b/index.html
@@ -45,61 +45,80 @@
     <!-- =================================== SECTION 1 =================================== -->
 
     <section class="section1">
-            <div class="row">
-                <div class="col-lg-12 section1-photo">
-                    <div class="section1-titres">
-                        <h3>- Since 1927 -</h3>
-                        <div class="separation"></div>
-                        <h1>LEWIS CHICKEN FARM</h1>
-                        <div class="separation"></div>
-                        <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
-                    </div>
+        <div class="row">
+            <div class="col-lg-12 section1-photo">
+                <div class="section1-titres">
+                    <h3>- Since 1927 -</h3>
+                    <div class="separation"></div>
+                    <h1>LEWIS CHICKEN FARM</h1>
+                    <div class="separation"></div>
+                    <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- =================================== SECTION 2 =================================== -->
 
-    <section>
-        <div class="section2">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="section2-photo"
-                        style="background-image: url(/assets/images/section2/left/section2-left.jpg)">
-                        <div class="section2-titres">
-                            <h2>ABOUT THE FARM</h2>
-                            <a href="#">Our Story</a>
-                        </div>
+    <section class="section2">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="section2-photo"
+                    style="background-image: url(/assets/images/section2/left/section2-left.jpg)">
+                    <div class="section2-titres">
+                        <h2>ABOUT THE FARM</h2>
+                        <a href="#">Our Story</a>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="section2-photo"
-                        style="background-image: url(/assets/images/section2/middle/section2-middle.jpg)">
-                        <div class="section2-middle">
-                            <h2>FRESH FARM PRODUCTS</h2>
-                            <div class="section2-logo-middle">
-                                <img src="/assets/images/section2/middle/Plugin icon - 1.png" alt="Logo best quality">
-                            </div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus expedita, ea vitae earum
-                                vero reiciendis rerum explicabo ab, vel sunt dolor? Quod, reprehenderit? Similique eum
-                                repellendus praesentium necessitatibus eos sunt porro laborum architecto reiciendis.
-                                Numquam!</p>
-                            <a href="#" class="btn">Order Today</a>
+            </div>
+            <div class="col-lg-4">
+                <div class="section2-photo"
+                    style="background-image: url(/assets/images/section2/middle/section2-middle.jpg)">
+                    <div class="section2-middle">
+                        <h2>FRESH FARM PRODUCTS</h2>
+                        <div class="section2-logo-middle">
+                            <img src="/assets/images/section2/middle/Plugin icon - 1.png" alt="Logo best quality">
                         </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus expedita, ea vitae earum
+                            vero reiciendis rerum explicabo ab, vel sunt dolor? Quod, reprehenderit? Similique eum
+                            repellendus praesentium necessitatibus eos sunt porro laborum architecto reiciendis.
+                            Numquam!</p>
+                        <a href="#" class="btn">Order Today</a>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="section2-photo"
-                        style="background-image: url(/assets/images/section2/right/section2-right.jpg)" >
-                        <div class="section2-titres">
-                            <h2>PAY US A VISIT</h2>
-                            <a href="#">Our Address</a>
-                        </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="section2-photo"
+                    style="background-image: url(/assets/images/section2/right/section2-right.jpg)">
+                    <div class="section2-titres">
+                        <h2>PAY US A VISIT</h2>
+                        <a href="#">Our Address</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- =================================== SECTION 3 =================================== -->
+
+    <section class="section3">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section3-content">
+                    <img src="/assets/images/section3/section3-logo.JPG" alt="image de poule">
+                    <h2>WHAT OUR CLIENTS SAY</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo inventore similique laboriosam
+                        ipsum, repudiandae neque et ad distinctio eos ex aliquid libero! Tempora, natus at. Quasi quas
+                        veniam consequuntur optio.</p>
+                    <h6>Linn Spencer &nbsp / &nbsp San Francisco</h6>
+                    <div class="separation2">• • •</div>
+                    <h2>FOLLOW US ON INSTAGRAM</h2>
+                    <h3>#lewischickenfarm</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
