--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>Lewis Farm</title>
 </head>
@@ -29,15 +30,17 @@
     <!-- =================================== NAVBAR =================================== -->
 
     <nav>
-        <div class="row">
-            <div class="col-lg-5 logo-nav">
-                <a href="#"><img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm"></a>
-            </div>
-            <div class="col-lg-7 menus-nav">
-                <a href="#">ABOUT THE FARM</a>
-                <a href="#">SHOP PRODUCTS</a>
-                <a href="#">FAQ</a>
-                <a href="#">SAY HELLO</a>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-5 logo-nav">
+                    <a href="#"><img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm"></a>
+                </div>
+                <div class="col-lg-7 menus-nav">
+                    <a href="#">ABOUT THE FARM</a>
+                    <a href="#">SHOP PRODUCTS</a>
+                    <a href="#">FAQ</a>
+                    <a href="#">SAY HELLO</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -45,14 +48,16 @@
     <!-- =================================== SECTION 1 =================================== -->
 
     <section class="section1">
-        <div class="row">
-            <div class="col-lg-12 section1-photo">
-                <div class="section1-titres">
-                    <h3>- Since 1927 -</h3>
-                    <div class="separation"></div>
-                    <h1>LEWIS CHICKEN FARM</h1>
-                    <div class="separation"></div>
-                    <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 section1-photo">
+                    <div class="section1-titres">
+                        <h3>- Since 1927 -</h3>
+                        <div class="separation"></div>
+                        <h1>LEWIS CHICKEN FARM</h1>
+                        <div class="separation"></div>
+                        <h2>100% ORGANIC &nbsp / &nbsp FREE RANGE &nbsp / &nbsp GMO - FREE</h2>
+                    </div>
                 </div>
             </div>
         </div>
@@ -61,38 +66,40 @@
     <!-- =================================== SECTION 2 =================================== -->
 
     <section class="section2">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="section2-photo"
-                    style="background-image: url(/assets/images/section2/left/section2-left.jpg)">
-                    <div class="section2-titres">
-                        <h2>ABOUT THE FARM</h2>
-                        <a href="#">Our Story</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="section2-photo"
-                    style="background-image: url(/assets/images/section2/middle/section2-middle.jpg)">
-                    <div class="section2-middle">
-                        <h2>FRESH FARM PRODUCTS</h2>
-                        <div class="section2-logo-middle">
-                            <img src="/assets/images/section2/middle/Plugin icon - 1.png" alt="Logo best quality">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4 section2-content">
+                    <div class="section2-photo"
+                        style="background-image: url(/assets/images/section2/left/section2-left.jpg)">
+                        <div class="section2-titres">
+                            <h2>ABOUT THE FARM</h2>
+                            <a href="#">Our Story</a>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus expedita, ea vitae earum
-                            vero reiciendis rerum explicabo ab, vel sunt dolor? Quod, reprehenderit? Similique eum
-                            repellendus praesentium necessitatibus eos sunt porro laborum architecto reiciendis.
-                            Numquam!</p>
-                        <a href="#" class="btn">Order Today</a>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="section2-photo"
-                    style="background-image: url(/assets/images/section2/right/section2-right.jpg)">
-                    <div class="section2-titres">
-                        <h2>PAY US A VISIT</h2>
-                        <a href="#">Our Address</a>
+                <div class="col-lg-4 section2-content">
+                    <div class="section2-photo"
+                        style="background-image: url(/assets/images/section2/middle/section2-middle.jpg)">
+                        <div class="section2-middle">
+                            <h2>FRESH FARM PRODUCTS</h2>
+                            <div class="section2-logo-middle">
+                                <img src="/assets/images/section2/middle/Plugin icon - 1.png" alt="Logo best quality">
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus expedita, ea vitae earum
+                                vero reiciendis rerum explicabo ab, vel sunt dolor? Quod, reprehenderit? Similique eum
+                                repellendus praesentium necessitatibus eos sunt porro laborum architecto reiciendis.
+                                Numquam!</p>
+                            <a href="#" class="btn">Order Today</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 section2-content">
+                    <div class="section2-photo"
+                        style="background-image: url(/assets/images/section2/right/section2-right.jpg)">
+                        <div class="section2-titres">
+                            <h2>PAY US A VISIT</h2>
+                            <a href="#">Our Address</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -119,6 +126,72 @@
         </div>
     </section>
 
+    <!-- =================================== SECTION 4 =================================== -->
+
+    <section class="section4">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3 section4-photos">
+                    <img src="/assets/images/section4/01.jpg" alt="Champ de poule">
+                </div>
+                <div class="col-lg-3 section4-photos">
+                    <img src="/assets/images/section4/02.jpg" alt="Oeufs">
+                </div>
+                <div class="col-lg-3 section4-photos">
+                    <img src="/assets/images/section4/03.jpg" alt="Poule">
+                </div>
+                <div class="col-lg-3 section4-photos">
+                    <img src="/assets/images/section4/04.jpg" alt="Oeufs">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 section4-photos">
+                    <img src="/assets/images/section4/05.jpg" alt="Champ de poule">
+                </div>
+                <div class="col-lg-3 section4-photos">
+                    <img src="/assets/images/section4/06.jpg" alt="Salade avec un oeuf">
+                </div>
+                <div class="col-lg-3 section4-photos">
+                    <img src="/assets/images/section4/07.jpg" alt="Oeufs">
+                </div>
+                <div class="col-lg-3 section4-photos">
+                    <img src="/assets/images/section4/08.jpg" alt="Petite fille avec des poules">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- =================================== FOOTER =================================== -->
+
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3 footer-content">
+                    <img src="/assets/images/footer/illustration-poules.JPG" alt="image de poule avec poussins">
+                </div>
+                <div class="col-lg-3 footer-content">
+                    <h4>Details</h4>
+                    <p>500 Terry Francois Street</p>
+                    <p>San Francisco, CA 94158</p>
+                    <p>123-456-7890</p>
+                    <p>info@my-domain.com</p>
+                </div>
+                <div class="col-lg-3 footer-content">
+                    <h4>Store Policy</h4>
+                    <p>shipping & delivery</p>
+                    <p>Term & Conditions</p>
+                    <p>FAQ</p>
+                </div>
+                <div class="col-lg-3 footer-content">
+                    <div class="social">
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                    </div>
+                    <h6>&#169; 2023 by Lewis Farm.</h6>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
