--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-5 logo-nav">
-                    <a href="#"><img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm"></a>
+                    <a href="/index.html"><img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm"></a>
                 </div>
                 <div class="col-lg-7 menus-nav">
-                    <a href="#">ABOUT THE FARM</a>
+                    <a href="/about-the-farm.html">ABOUT THE FARM</a>
                     <a href="#">SHOP PRODUCTS</a>
                     <a href="#">FAQ</a>
                     <a href="#">SAY HELLO</a>
@@ -45,13 +45,13 @@
         </div>
     </nav>
 
-    <!-- =================================== SECTION 1 =================================== -->
+    <!-- =================================== SECTION 1-0 =================================== -->
 
-    <section class="section1">
+    <section class="section1-0">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 section1-photo">
-                    <div class="section1-titres">
+                <div class="col-lg-12 section1-0-photo" style="background-image: url(/assets/images/accueil/section1-0/section1-photo.jpg)">
+                    <div class="section1-0-titres">
                         <h3>- Since 1927 -</h3>
                         <div class="separation"></div>
                         <h1>LEWIS CHICKEN FARM</h1>
@@ -63,27 +63,26 @@
         </div>
     </section>
 
-    <!-- =================================== SECTION 2 =================================== -->
+    <!-- =================================== SECTION 1-1 =================================== -->
 
-    <section class="section2">
+    <section class="section1-1">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-4 section2-content">
-                    <div class="section2-photo"
-                        style="background-image: url(/assets/images/section2/left/section2-left.jpg)">
-                        <div class="section2-titres">
+                <div class="col-lg-4 section1-1-content">
+                    <div class="section1-1-photo"
+                        style="background-image: url(/assets/images/accueil/section1-1/left/section2-left.jpg)">
+                        <div class="section1-1-titres">
                             <h2>ABOUT THE FARM</h2>
-                            <a href="#">Our Story</a>
+                            <a href="/about-the-farm.html">Our Story</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 section2-content">
-                    <div class="section2-photo"
-                        style="background-image: url(/assets/images/section2/middle/section2-middle.jpg)">
-                        <div class="section2-middle">
+                <div class="col-lg-4 section1-1-content">
+                    <div class="section1-1-photo">
+                        <div class="section1-1-middle">
                             <h2>FRESH FARM PRODUCTS</h2>
-                            <div class="section2-logo-middle">
-                                <img src="/assets/images/section2/middle/Plugin icon - 1.png" alt="Logo best quality">
+                            <div class="section1-1-logo-middle">
+                                <img src="/assets/images/accueil/section1-1/middle/Plugin icon - 1.png" alt="Logo best quality">
                             </div>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus expedita, ea vitae earum
                                 vero reiciendis rerum explicabo ab, vel sunt dolor? Quod, reprehenderit? Similique eum
@@ -93,10 +92,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 section2-content">
-                    <div class="section2-photo"
-                        style="background-image: url(/assets/images/section2/right/section2-right.jpg)">
-                        <div class="section2-titres">
+                <div class="col-lg-4 section1-1-content">
+                    <div class="section1-1-photo"
+                        style="background-image: url(/assets/images/accueil/section1-1/right/section2-right.jpg)">
+                        <div class="section1-1-titres">
                             <h2>PAY US A VISIT</h2>
                             <a href="#">Our Address</a>
                         </div>
@@ -106,13 +105,13 @@
         </div>
     </section>
 
-    <!-- =================================== SECTION 3 =================================== -->
+    <!-- =================================== SECTION 1-2 =================================== -->
 
-    <section class="section3">
+    <section class="section1-2">
         <div class="row">
             <div class="col-lg-12">
-                <div class="section3-content">
-                    <img src="/assets/images/section3/section3-logo.JPG" alt="image de poule">
+                <div class="section1-2-content">
+                    <img src="/assets/images/accueil/section1-2/section3-logo.JPG" alt="image de poule">
                     <h2>WHAT OUR CLIENTS SAY</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo inventore similique laboriosam
                         ipsum, repudiandae neque et ad distinctio eos ex aliquid libero! Tempora, natus at. Quasi quas
@@ -126,36 +125,36 @@
         </div>
     </section>
 
-    <!-- =================================== SECTION 4 =================================== -->
+    <!-- =================================== SECTION 1.3 =================================== -->
 
-    <section class="section4">
+    <section class="section1-3">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-3 section4-photos">
-                    <img src="/assets/images/section4/01.jpg" alt="Champ de poule">
+                <div class="col-lg-3 section1-3-photos">
+                    <img src="/assets/images/accueil/section1-3/01.jpg" alt="Champ de poule">
                 </div>
-                <div class="col-lg-3 section4-photos">
-                    <img src="/assets/images/section4/02.jpg" alt="Oeufs">
+                <div class="col-lg-3 section1-3-photos">
+                    <img src="/assets/images/accueil/section1-3/02.jpg" alt="Oeufs">
                 </div>
-                <div class="col-lg-3 section4-photos">
-                    <img src="/assets/images/section4/03.jpg" alt="Poule">
+                <div class="col-lg-3 section1-3-photos">
+                    <img src="/assets/images/accueil/section1-3/03.jpg" alt="Poule">
                 </div>
-                <div class="col-lg-3 section4-photos">
-                    <img src="/assets/images/section4/04.jpg" alt="Oeufs">
+                <div class="col-lg-3 section1-3-photos">
+                    <img src="/assets/images/accueil/section1-3/04.jpg" alt="Oeufs">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 section4-photos">
-                    <img src="/assets/images/section4/05.jpg" alt="Champ de poule">
+                <div class="col-lg-3 section1-3-photos">
+                    <img src="/assets/images/accueil/section1-3/05.jpg" alt="Champ de poule">
                 </div>
-                <div class="col-lg-3 section4-photos">
-                    <img src="/assets/images/section4/06.jpg" alt="Salade avec un oeuf">
+                <div class="col-lg-3 section1-3-photos">
+                    <img src="/assets/images/accueil/section1-3/06.jpg" alt="Salade avec un oeuf">
                 </div>
-                <div class="col-lg-3 section4-photos">
-                    <img src="/assets/images/section4/07.jpg" alt="Oeufs">
+                <div class="col-lg-3 section1-3-photos">
+                    <img src="/assets/images/accueil/section1-3/07.jpg" alt="Oeufs">
                 </div>
-                <div class="col-lg-3 section4-photos">
-                    <img src="/assets/images/section4/08.jpg" alt="Petite fille avec des poules">
+                <div class="col-lg-3 section1-3-photos">
+                    <img src="/assets/images/accueil/section1-3/08.jpg" alt="Petite fille avec des poules">
                 </div>
             </div>
         </div>
