--- a/about-the-farm.html
+++ b/about-the-farm.html
@@ -67,6 +67,57 @@
         </div>
     </section>
 
+    <!-- =================================== SECTION 2-1 =================================== -->
+
+    <section class="section2-1">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 section2-1-content">
+                    <img src="/assets/images/about-the-farm/section2-1/illustration-poussin.JPG"
+                        alt="illustration-poussin">
+                    <h2>ABOUT LEWIS FARM</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, ut quasi! Id, hic placeat
+                        aperiam saepe cupiditate sunt nihil neque vel corporis ab tempore quibusdam laboriosam eos
+                        expedita ex ratione dolor eveniet natus sequi, possimus voluptates dolores, animi magni nulla.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed modi sit vel delectus ratione?
+                        Recusandae id eos sint cupiditate adipisci.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ut neque, quae repellendus
+                        repudiandae debitis voluptatum dolore culpa! Eum rem, eos possimus quia ullam saepe dignissimos
+                        ipsam sequi beatae optio odit, architecto nostrum aut vel at alias. Saepe molestias illum error
+                        placeat cupiditate officia nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Possimus hic reiciendis rem similique, commodi eius quod consequuntur, sed dolorem fugiat quas?
+                        Dolore rerum deleniti amet, provident laudantium illum adipisci, velit ut maxime ex minus
+                        necessitatibus!</p>
+                    <a href="#" class="btn">Visit Us</a>
+                </div>
+                <div class="col-lg-3"></div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- =================================== SECTION 2-2 =================================== -->
+
+    <section class="section2-2">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 section2-2-content">
+                    <img src="/assets/images/about-the-farm/section2-2/poule-debout.jpg"
+                        alt="poule-about">
+                </div>
+                <div class="col-lg-6 section2-2-content" style="background-color: rgb(255, 181, 45)">
+                    <h2>100% ORGANIC, FREE RANGE & GMO FREE</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum ea voluptas nihil atque quaerat?
+                        Incidunt qui ipsam tempora dicta, fugiat sunt illo vel in voluptatum quisquam aperiam, repellat
+                        praesentium at numquam aut libero molestiae animi cum iste possimus nulla necessitatibus optio
+                        explicabo! Nesciunt error consectetur, neque tempore quod iure doloremque?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- =================================== FOOTER =================================== -->
 
     <footer>
