--- a/about-the-farm.html
+++ b/about-the-farm.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col-lg-7 menus-nav">
                     <a href="/about-the-farm.html">ABOUT THE FARM</a>
-                    <a href="#">SHOP PRODUCTS</a>
+                    <a href="/shop-products.html">SHOP PRODUCTS</a>
                     <a href="#">FAQ</a>
                     <a href="#">SAY HELLO</a>
                 </div>
