--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-lg-7 menus-nav">
                     <a href="/about-the-farm.html">ABOUT THE FARM</a>
-                    <a href="#">SHOP PRODUCTS</a>
+                    <a href="/shop-products.html">SHOP PRODUCTS</a>
                     <a href="#">FAQ</a>
                     <a href="#">SAY HELLO</a>
                 </div>
@@ -88,7 +88,7 @@
                                 vero reiciendis rerum explicabo ab, vel sunt dolor? Quod, reprehenderit? Similique eum
                                 repellendus praesentium necessitatibus eos sunt porro laborum architecto reiciendis.
                                 Numquam!</p>
-                            <a href="#" class="btn">Order Today</a>
+                            <a href="/shop-products.html" class="btn">Order Today</a>
                         </div>
                     </div>
                 </div>
