--- a/assets/html/about-the-farm.html
+++ b/assets/html/about-the-farm.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Lewis Farm</title>
 </head>
 
@@ -33,14 +33,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-5 logo-nav">
-                    <a href="/index.html"><img src="/assets/images/navbar/logo-lewis-farm.JPG"
+                    <a href="/assets/html/index.html"><img src="/assets/images/navbar/logo-lewis-farm.JPG"
                             alt="Logo Lewis Farm"></a>
                 </div>
                 <div class="col-lg-7 menus-nav">
-                    <a href="/about-the-farm.html">ABOUT THE FARM</a>
-                    <a href="/shop-products.html">SHOP PRODUCTS</a>
-                    <a href="#">FAQ</a>
-                    <a href="#">SAY HELLO</a>
+                    <a href="/assets/html/about-the-farm.html">ABOUT THE FARM</a>
+                    <a href="/assets/html/shop-products.html">SHOP PRODUCTS</a>
+                    <a href="/assets/html/faq.html">FAQ</a>
+                    <a href="/assets/html/sayhello.html">SAY HELLO</a>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                         Possimus hic reiciendis rem similique, commodi eius quod consequuntur, sed dolorem fugiat quas?
                         Dolore rerum deleniti amet, provident laudantium illum adipisci, velit ut maxime ex minus
                         necessitatibus!</p>
-                    <a href="#" class="btn">Visit Us</a>
+                    <a href="/assets/html/sayhello.html" class="btn">Visit Us</a>
                 </div>
                 <div class="col-lg-3"></div>
 
@@ -104,8 +104,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 section2-2-content">
-                    <img src="/assets/images/about-the-farm/section2-2/poule-debout.jpg"
-                        alt="poule-about">
+                    <img src="/assets/images/about-the-farm/section2-2/poule-debout.jpg" alt="poule-about">
                 </div>
                 <div class="col-lg-6 section2-2-content" style="background-color: rgb(255, 181, 45)">
                     <h2>100% ORGANIC, FREE RANGE & GMO FREE</h2>
