--- a/assets/html/shop-products.html
+++ b/assets/html/shop-products.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Lewis Farm</title>
 </head>
 
@@ -33,14 +33,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-5 logo-nav">
-                    <a href="/index.html"><img src="/assets/images/navbar/logo-lewis-farm.JPG"
+                    <a href="/assets/html/index.html"><img src="/assets/images/navbar/logo-lewis-farm.JPG"
                             alt="Logo Lewis Farm"></a>
                 </div>
                 <div class="col-lg-7 menus-nav">
-                    <a href="/about-the-farm.html">ABOUT THE FARM</a>
-                    <a href="/shop-products.html">SHOP PRODUCTS</a>
-                    <a href="#">FAQ</a>
-                    <a href="#">SAY HELLO</a>
+                    <a href="/assets/html/about-the-farm.html">ABOUT THE FARM</a>
+                    <a href="/assets/html/shop-products.html">SHOP PRODUCTS</a>
+                    <a href="/assets/html/faq.html">FAQ</a>
+                    <a href="/assets/html/sayhello.html">SAY HELLO</a>
                 </div>
             </div>
         </div>
