--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Lewis Farm</title>
 </head>
 
@@ -33,13 +33,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-5 logo-nav">
-                    <a href="/index.html"><img src="/assets/images/navbar/logo-lewis-farm.JPG" alt="Logo Lewis Farm"></a>
+                    <a href="/assets/html/index.html"><img src="/assets/images/navbar/logo-lewis-farm.JPG"
+                            alt="Logo Lewis Farm"></a>
                 </div>
                 <div class="col-lg-7 menus-nav">
-                    <a href="/about-the-farm.html">ABOUT THE FARM</a>
-                    <a href="/shop-products.html">SHOP PRODUCTS</a>
-                    <a href="#">FAQ</a>
-                    <a href="#">SAY HELLO</a>
+                    <a href="/assets/html/about-the-farm.html">ABOUT THE FARM</a>
+                    <a href="/assets/html/shop-products.html">SHOP PRODUCTS</a>
+                    <a href="/assets/html/faq.html">FAQ</a>
+                    <a href="/assets/html/sayhello.html">SAY HELLO</a>
                 </div>
             </div>
         </div>
@@ -50,7 +51,8 @@
     <section class="section1-0">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 section1-0-photo" style="background-image: url(/assets/images/accueil/section1-0/section1-photo.jpg)">
+                <div class="col-lg-12 section1-0-photo"
+                    style="background-image: url(/assets/images/accueil/section1-0/section1-photo.jpg)">
                     <div class="section1-0-titres">
                         <h3>- Since 1927 -</h3>
                         <div class="separation"></div>
@@ -73,7 +75,7 @@
                         style="background-image: url(/assets/images/accueil/section1-1/left/section2-left.jpg)">
                         <div class="section1-1-titres">
                             <h2>ABOUT THE FARM</h2>
-                            <a href="/about-the-farm.html">Our Story</a>
+                            <a href="/assets/html/about-the-farm.html">Our Story</a>
                         </div>
                     </div>
                 </div>
@@ -82,13 +84,14 @@
                         <div class="section1-1-middle">
                             <h2>FRESH FARM PRODUCTS</h2>
                             <div class="section1-1-logo-middle">
-                                <img src="/assets/images/accueil/section1-1/middle/Plugin icon - 1.png" alt="Logo best quality">
+                                <img src="/assets/images/accueil/section1-1/middle/Plugin icon - 1.png"
+                                    alt="Logo best quality">
                             </div>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus expedita, ea vitae earum
                                 vero reiciendis rerum explicabo ab, vel sunt dolor? Quod, reprehenderit? Similique eum
                                 repellendus praesentium necessitatibus eos sunt porro laborum architecto reiciendis.
                                 Numquam!</p>
-                            <a href="/shop-products.html" class="btn">Order Today</a>
+                            <a href="/assets/html/shop-products.html" class="btn">Order Today</a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +100,7 @@
                         style="background-image: url(/assets/images/accueil/section1-1/right/section2-right.jpg)">
                         <div class="section1-1-titres">
                             <h2>PAY US A VISIT</h2>
-                            <a href="#">Our Address</a>
+                            <a href="/assets/html/sayhello.html">Our Address</a>
                         </div>
                     </div>
                 </div>
