--- a/assets/html/about-the-farm.html
+++ b/assets/html/about-the-farm.html
@@ -51,7 +51,7 @@
     <section class="section2-0">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6 section2-0-content" style="background-color: rgb(255, 181, 45)">
+                <div class="col-lg-6 section2-0-content">
                     <h2>OUR STORY</h2>
                     <h3>3rd Generation Family-Owned Business</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum ea voluptas nihil atque quaerat?
