--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -51,11 +51,46 @@
     <section class="section4-0">
         <div class="container-fluid">
             <div class="row">
+                <div class="col-lg-6 section4-0-content">
+                    <h2>IMPORTANT INFORMATION</h2>
+                    <h4>Frenquently asked questions</h4>
+                    <select class="select-form" aria-label="Default select example">
+                        <option selected>How much does the toy coast?</option>
+                        <option value="1">One</option>
+                    </select>
+                    <div class="separation3"></div>
+                    <select class="selectpicker" aria-label="Default select example">
+                        <option selected>How does the Pit-Ball help you?</option>
+                        <option value="1">One</option>
+                    </select>
+                    <div class="separation3"></div>
+                    <select class="selectpicker" aria-label="Default select example">
+                        <option selected>What does the toy do?</option>
+                        <option value="1">One</option>
+                    </select>
+                    <div class="separation3"></div>
+                    <select class="selectpicker" aria-label="Default select example">
+                        <option selected>How is Pit-Ball different than other brands, such as Kong or Jolly Ball?
+                        </option>
+                        <option value="1">One</option>
+                    </select>
+                    <div class="separation3"></div>
+                </div>
+                <div class="col-lg-6 section4-0-content">
+                    <img src="/assets/images/faq/poule-faq.jpg" alt="poules">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="section4-0">
+        <div class="container-fluid">
+            <div class="row">
                 <div class="col-lg-6">
                     <div class="section4-0-content">
                         <h2>IMPORTANT INFORMATION</h2>
                         <h4>Frenquently asked questions</h4>
-                        <select class="selectpicker" aria-label="Default select example">
+                        <select class="select-form" aria-label="Default select example">
                             <option selected>How much does the toy coast?</option>
                             <option value="1">One</option>
                         </select>
@@ -71,7 +106,7 @@
                         </select>
                         <div class="separation3"></div>
                         <select class="selectpicker" aria-label="Default select example">
-                            <option selected>How is Pit-Ball different than other brands, such as Kong or Jolly Ball? 
+                            <option selected>How is Pit-Ball different than other brands, such as Kong or Jolly Ball?
                             </option>
                             <option value="1">One</option>
                         </select>
@@ -79,13 +114,11 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="section4-0-photo">
                         <img src="/assets/images/faq/poule-faq.jpg" alt="poules">
-                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- =================================== FOOTER =================================== -->
 
