--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -54,33 +54,70 @@
                 <div class="col-lg-6 section4-0-content">
                     <h2>IMPORTANT INFORMATION</h2>
                     <h4>Frenquently asked questions</h4>
-                    <select class="select-form" aria-label="Default select example">
-                        <option selected>How much does the toy coast?</option>
-                        <option value="1">One</option>
-                    </select>
-                    <div class="separation3"></div>
-                    <select class="selectpicker" aria-label="Default select example">
-                        <option selected>How does the Pit-Ball help you?</option>
-                        <option value="1">One</option>
-                    </select>
-                    <div class="separation3"></div>
-                    <select class="selectpicker" aria-label="Default select example">
-                        <option selected>What does the toy do?</option>
-                        <option value="1">One</option>
-                    </select>
-                    <div class="separation3"></div>
-                    <select class="selectpicker" aria-label="Default select example">
-                        <option selected>How is Pit-Ball different than other brands, such as Kong or Jolly Ball?
-                        </option>
-                        <option value="1">One</option>
-                    </select>
-                    <div class="separation3"></div>
+                    <div class="accordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the first item's accordion body.</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #4
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the fourth item's accordion body.</strong>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-6 section4-0-content">
-                    <img src="/assets/images/faq/poule-faq.jpg" alt="poules">
+                    <div class="col-lg-6 section4-0-content">
+                        <img src="/assets/images/faq/poule-faq.jpg" alt="poules">
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <!-- <section class="section4-0">
