--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- =================================== FONTS =================================== -->
 
@@ -54,15 +55,15 @@
                 <div class="col-lg-6 section4-0-content">
                     <h2>IMPORTANT INFORMATION</h2>
                     <h4>Frenquently asked questions</h4>
-                    <div class="accordion">
+                    <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Accordion Item #1
+                                    How much does the toy coast?
                                 </button>
                             </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <strong>This is the first item's accordion body.</strong>
@@ -73,7 +74,7 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Accordion Item #2
+                                    How does the Pit-Ball help you?
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -87,7 +88,7 @@
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Accordion Item #3
+                                    What does the toy do?
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
@@ -98,13 +99,13 @@
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
+                            <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Accordion Item #4
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    How is Pit-Ball different than other brands, such as Kong or Jolly Ball?
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <strong>This is the fourth item's accordion body.</strong>
@@ -113,49 +114,12 @@
                         </div>
                     </div>
                 </div>
-                    <div class="col-lg-6 section4-0-content">
-                        <img src="/assets/images/faq/poule-faq.jpg" alt="poules">
-                    </div>
-                </div>
-            </div>
-    </section>
-
-    <!-- <section class="section4-0">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="section4-0-content">
-                        <h2>IMPORTANT INFORMATION</h2>
-                        <h4>Frenquently asked questions</h4>
-                        <select class="select-form" aria-label="Default select example">
-                            <option selected>How much does the toy coast?</option>
-                            <option value="1">One</option>
-                        </select>
-                        <div class="separation3"></div>
-                        <select class="selectpicker" aria-label="Default select example">
-                            <option selected>How does the Pit-Ball help you?</option>
-                            <option value="1">One</option>
-                        </select>
-                        <div class="separation3"></div>
-                        <select class="selectpicker" aria-label="Default select example">
-                            <option selected>What does the toy do?</option>
-                            <option value="1">One</option>
-                        </select>
-                        <div class="separation3"></div>
-                        <select class="selectpicker" aria-label="Default select example">
-                            <option selected>How is Pit-Ball different than other brands, such as Kong or Jolly Ball?
-                            </option>
-                            <option value="1">One</option>
-                        </select>
-                        <div class="separation3"></div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                        <img src="/assets/images/faq/poule-faq.jpg" alt="poules">
+                <div class="col-lg-6 section4-0-content">
+                    <img src="/assets/images/faq/poule-faq.jpg" alt="poules">
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- =================================== FOOTER =================================== -->
 
