--- a/assets/html/sayhello.html
+++ b/assets/html/sayhello.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- =================================== FONTS =================================== -->
 
@@ -45,6 +46,30 @@
             </div>
         </div>
     </nav>
+
+    <!-- =================================== SECTION 5-0 =================================== -->
+
+    <section class="section5-0">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 section5-0-content">
+                    <img src="/assets/images/sayhello/section5-0/say-hello.webp"
+                        alt="Photo ancienne d'une petite fille avec une poule">
+                </div>
+                <div class="col-lg-6 section5-0-content">
+                    <div class="section5-0-formulaire">
+                        <h2>CONTACT US</h2>
+                        <div class="section5-0-phone">
+                            <h6>123-456-7890</h6>
+                        <div class="separation3"></div>
+                        <h6>info@my-domain.com</h6>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <!-- =================================== FOOTER =================================== -->
 
