--- a/assets/html/sayhello.html
+++ b/assets/html/sayhello.html
@@ -57,16 +57,48 @@
                         alt="Photo ancienne d'une petite fille avec une poule">
                 </div>
                 <div class="col-lg-6 section5-0-content">
-                    <div class="section5-0-formulaire">
-                        <h2>CONTACT US</h2>
-                        <div class="section5-0-phone">
-                            <h6>123-456-7890</h6>
-                        <div class="separation3"></div>
-                        <h6>info@my-domain.com</h6>
+                    <form class="section5-0-formulaire">
+                        <div class="section5-0-form-titre">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <h2>CONTACT US</h2>
+                                        <div class="row">
+                                            <div class="col-lg-6 left">
+                                                <h6>123-456-7890</h6>
+                                            </div>
+                                            <div class="col-lg-6 right">
+                                                <h6>info@my-domain.com</h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                        <div class="row g-3">
+                            <div class="col">
+                                <label for="form-control" class="form-label">Name</label>
+                                <input type="text" class="form-control" placeholder="Write your name here"
+                                    aria-label="name">
+                            </div>
+                            <div class="col">
+                                <label for="form-control" class="form-label">Phone</label>
+                                <input type="text" class="form-control" placeholder="Write your phone here"
+                                    aria-label="phone">
+                            </div>
+                        </div>
+                        <div class="col-12 section5-0-email">
+                            <label for="inputEmail4" class="form-label">Email</label>
+                            <input type="email" class="form-control" placeholder="Write your email here" id="inputEmail4">
+                        </div>
+                        <div class="col-12">
+                            <label for="Message" class="form-label">Message</label>
+                            <textarea class="form-control" placeholder="Add your message here" id="Message"
+                                rows="3"></textarea>
+                        </div>
+                        <a href="#" class="btn">Order Today</a>
+                    </form>
                 </div>
-
             </div>
         </div>
     </section>
