--- a/assets/html/about-the-farm.html
+++ b/assets/html/about-the-farm.html
@@ -91,7 +91,7 @@
                         Possimus hic reiciendis rem similique, commodi eius quod consequuntur, sed dolorem fugiat quas?
                         Dolore rerum deleniti amet, provident laudantium illum adipisci, velit ut maxime ex minus
                         necessitatibus!</p>
-                    <a href="/assets/html/sayhello.html" class="btn">Visit Us</a>
+                    <a href="/assets/html/sayhello.html#lewis-adress" class="btn">Visit Us</a>
                 </div>
                 <div class="col-lg-3"></div>
 
