--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -101,7 +101,7 @@
                         style="background-image: url(/assets/images/accueil/section1-1/right/section2-right.jpg)">
                         <div class="section1-1-titres">
                             <h2>PAY US A VISIT</h2>
-                            <a href="/assets/html/sayhello.html">Our Address</a>
+                            <a href="/assets/html/sayhello.html#lewis-adress">Our Address</a>
                         </div>
                     </div>
                 </div>
