--- a/assets/html/sayhello.html
+++ b/assets/html/sayhello.html
@@ -107,7 +107,8 @@
 
     <!-- =================================== SECTION 5-1 =================================== -->
 
-    <section class="section5-1">
+    <a name="lewis-adress"></a>
+    <section class="section5-1" 
         <div class="container">
             <div class="row">
                 <div class="col-lg-2">
@@ -130,6 +131,21 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- =================================== SECTION 5-2 =================================== -->
+
+    <section class="section5-2">
+        <img src="/assets/images/sayhello/section5-2/photo-aerienne-ferme.jpg" alt="photo-aerienne-ferme">
+    </section>
+
+    <!-- =================================== SECTION 5-3 =================================== -->
+
+    <section class="section5-3">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2371.942030087168!2d-113.66882358396299!3d53.523092169158375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53a0211befb712bf%3A0x2aa62a9f85a85671!2sLewis%20Farms%20Transit%20Centre!5e0!3m2!1sen!2sfr!4v1655477706334!5m2!1sen!2sfr"
+            width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <!-- =================================== FOOTER =================================== -->
