--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -121,7 +121,7 @@
                         ipsum, repudiandae neque et ad distinctio eos ex aliquid libero! Tempora, natus at. Quasi quas
                         veniam consequuntur optio.</p>
                     <h6>Linn Spencer &nbsp / &nbsp San Francisco</h6>
-                    <div class="separation2">• • •</div>
+                    <div class="separation2"><span>•</span><span>•</span><span>•</span></div>
                     <h2>FOLLOW US ON INSTAGRAM</h2>
                     <h3>#lewischickenfarm</h3>
                 </div>
