--- a/assets/html/sayhello.html
+++ b/assets/html/sayhello.html
@@ -56,12 +56,12 @@
                     <img src="/assets/images/sayhello/section5-0/say-hello.webp"
                         alt="Photo ancienne d'une petite fille avec une poule">
                 </div>
-                <div class="col-lg-6 section5-0-content">
+                <div class="col-lg-6 section5-0-content" style="background: #ffb84e">
                     <form class="section5-0-formulaire">
                         <div class="section5-0-form-titre">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-lg-5">
+                                    <div class="col-lg-12">
                                         <h2>CONTACT US</h2>
                                     </div>
                                     <div class="row">
@@ -108,28 +108,27 @@
     <!-- =================================== SECTION 5-1 =================================== -->
 
     <a name="lewis-adress"></a>
-    <section class="section5-1" 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-2">
-                    <img src="/assets/images/sayhello/section5-1/illustration-panier-oeufs.JPG"
-                        alt="illustration-panier-oeufs">
-                </div>
+    <section class="section5-1" <div class="container">
+        <div class="row">
+            <div class="col-lg-2">
+                <img src="/assets/images/sayhello/section5-1/illustration-panier-oeufs.JPG"
+                    alt="illustration-panier-oeufs">
             </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <h2>VISIT OUR FARM</h2>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <h2>VISIT OUR FARM</h2>
             </div>
-            <div class="row">
-                <div class="col-lg-3">
-                    <p>500 Terry Francois Street <br> San Francisco, CA 94158</p>
-                </div>
-                <div class="col-lg-1 section5-middle"></div>
-                <div class="col-lg-3">
-                    <p>Mon - Fri: 7am - 5pm <br> Sat: 10am - 5pm</p>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3">
+                <p>500 Terry Francois Street <br> San Francisco, CA 94158</p>
             </div>
+            <div class="col-lg-1 section5-middle"></div>
+            <div class="col-lg-3">
+                <p>Mon - Fri: 7am - 5pm <br> Sat: 10am - 5pm</p>
+            </div>
+        </div>
         </div>
     </section>
 
