--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -66,7 +66,7 @@
                             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong>
+                                    <strong>Between $9.99 and $29.99 each.</strong>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    How does the Pit-Ball help you?
+                                    He is a gardian angel for the farm.
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -94,7 +94,7 @@
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong>
+                                    <strong>Eat and lay eggs.</strong>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the fourth item's accordion body.</strong>
+                                    <strong>Stronger than others.</strong>
                                 </div>
                             </div>
                         </div>
